--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-<link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Vollkorn:400,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Libre+Franklin:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
@@ -17,7 +15,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Valdivia.</title>
+    <title>Valdivia, Ecuador - 2100 BC</title>
   </head>
       <div id="root"></div>
 </html>
